--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Akash",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "resolutions": {
+    "styled-components": "^5.3.1"
+  },
   "dependencies": {
+    "@styled-icons/boxicons-logos": "^10.38.0",
+    "@styled-icons/entypo": "^10.34.0",
+    "add": "^2.0.6",
+    "firebase": "^9.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.1",
+    "styled-components": "^5.3.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2"
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "autoprefixer": "^10.3.7",
+    "eslint": "^8.0.1",
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.17",
+    "typescript": "4.4.4"
   }
 }
